syntax = "proto3";

package github.proto;

message PullRequestFileResponse {
  repeated PullRequestFile data = 1;
}

// https://developer.github.com/v3/pulls/#list-pull-requests-files
message PullRequestFile {
  string sha = 1;
  string filename = 2;
  string status = 3;
  uint32 additions = 4;
  uint32 deletions = 5;
  uint32 changes = 6;
  string blob_url = 7;
  string raw_url = 8;
  string contents_url = 9;
  string patch = 10;
}
